--- a/service.yaml
+++ b/service.yaml
@@ -3,14 +3,15 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    app: jenkins-apache-project
-  name: jenkins-apache-project
+    app: jenkins-apache-site
+  name: jenkins-apache-site
 spec:
   ports:
-  - port: 3002
+  - port: 8080
     protocol: TCP
-    targetPort: 3002
+    targetPort: 80
   selector:
-    app: jenkins-apache-project
+    app: jenkins-apache-site
+  type: NodePort
 status:
   loadBalancer: {}
